[project]
name = "radiotalk"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "airportsdata>=20260315",
    "datasets>=4.8.4",
    "numpy>=2.4.4",
    "openai>=2.32.0",
    "pyarrow>=24.0.0",
    "pydantic>=2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "soundfile>=0.13.1",
    "tenacity>=9.1.4",
    "torch>=2.11.0",
    "torchcodec>=0.11.1",
    "typer>=0.24.1",
]

[project.optional-dependencies]
hf = [
    "huggingface-hub>=1.11.0",
    "hf-transfer>=0.1.9",
]

[project.scripts]
radiotalk = "radiotalk.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/radiotalk"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
